--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,17 +1,17 @@
 <% if authorize_for('surveys', 'edit') %>
   <%= form_for @survey, :url => {:controller => 'surveys', :action => 'update', :project_id => @project, :id => @survey}, :html => {:id => 'survey-form'} do |f| %>
-     <%= render :partial => 'surveys/form', :locals => {:f => f} %>
+    <%= render :partial => 'surveys/form', :locals => {:f => f} %>
     <p><%= submit_tag l(:button_change) %>
-<%#= link_to l(:label_preview), 
-  { :url => { :controller => 'surveys', :action => 'preview', :project_id => @project },
-    :method => 'post',
-    :remote => true,
-    :update => 'preview',
-    :with => "jQuery('survey-form').serialize()",
-    :complete => "jQuery('#preview').scrollTop(0)",
-  }, :accesskey => accesskey(:preview) %> |
-<%= link_to l(:button_cancel), {:action => 'show', :id => @survey } %></p>
+    <%#= link_to l(:label_preview), 
+      { :url => { :controller => 'surveys', :action => 'preview', :project_id => @project },
+        :method => 'post',
+        :remote => true,
+        :update => 'preview',
+        :with => "jQuery('survey-form').serialize()",
+        :complete => "jQuery('#preview').scrollTop(0)",
+      }, :accesskey => accesskey(:preview) %> |
+    <%= link_to l(:button_cancel), {:action => 'index', :id => @survey, :anchor => @survey.id } %></p>
   <% end %>
-<div id="preview" class="wiki"></div>
- <% end %>
+  <div id="preview" class="wiki"></div>
+<% end %>
 
